# adorapp

./: LICENSE  README.md  pyproject.toml
src/: main.py
src/components/: __init__.py  components.py
src/models/: __init__.py  models.py
src/views/: __init__.py  character_settings_view.py  edit_view.py  main_view.py  settings_view.py  song_form_view.py  theme_utils.py
