[project]
name = "grupos_canciones"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Kevin Torrecilla", email = "andrestorrecilla.14@gmail.com" }
]
dependencies = [
  "flet==0.28.3"
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.kevintorrecilla"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "Agrupador Canciones"

# company name to display in about app dialogs
company = "Kevin Torrecilla"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by Kevin Torrecilla"

[tool.flet.app]
path = "src"

[tool.flet.app.icon]
image = "assets/icon.ico"

[tool.flet.android]
permissions = [
    "android.permission.WRITE_EXTERNAL_STORAGE",
    "android.permission.READ_EXTERNAL_STORAGE"
]

[tool.uv]
dev-dependencies = [
    "flet[all]==0.28.3",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.28.3"}
